[package]
name = "crater-generate-report"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
regex = "1"
lazy_static = "1"
percent-encoding = "1"
