[package]
name = "crater-generate-report"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
regex = "1"
lazy_static = "1"
percent-encoding = "1"

[profile.release.package.crater-generate-report]
debug = 1
